--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+project_name: nomoperator
 builds:
   -
     # Custom environment variables to be set during the builds.
@@ -17,3 +18,52 @@ builds:
       - darwin
       - linux
       - windows
+
+archives:
+  -
+    format: binary
+
+dockers:
+  - use: buildx
+    goos: linux
+    goarch: amd64
+    image_templates:
+      - "loq9/{{ .ProjectName }}:{{ .Version }}-amd64"
+      - "loq9/{{ .ProjectName }}:latest-amd64"
+    build_flag_templates:
+      - "--platform=linux/amd64"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+  - use: buildx
+    goos: linux
+    goarch: arm64
+    image_templates:
+      - "loq9/{{ .ProjectName }}:{{ .Version }}-arm64v8"
+      - "loq9/{{ .ProjectName }}:latest-arm64v8"
+    build_flag_templates:
+      - "--platform=linux/arm64/v8"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+docker_manifests:
+  # https://goreleaser.com/customization/docker_manifest/
+  - name_template: loq9/{{ .ProjectName }}:{{ .Version }}
+    image_templates:
+      - loq9/{{ .ProjectName }}:{{ .Version }}-amd64
+      - loq9/{{ .ProjectName }}:{{ .Version }}-arm64v8
+  - name_template: loq9/{{ .ProjectName }}:latest
+    image_templates:
+      - loq9/{{ .ProjectName }}:latest-amd64
+      - loq9/{{ .ProjectName }}:latest-arm64v8
+checksum:
+  # https://goreleaser.com/customization/checksum/
+  name_template: 'checksums.txt'
+snapshot:
+  # https://goreleaser.com/customization/snapshots/
+  name_template: "{{ incpatch .Version }}-SNAPSHOT"
+source:
+  # https://goreleaser.com/customization/source/
+  enabled: true
