--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,23 +1,17 @@
 project_name: nomoperator
 builds:
   -
-    # Custom environment variables to be set during the builds.
-    # Default is empty.
-    env:
-      - CGO_ENABLED=0
-
-    # Binary name.
-    # Can be a path (e.g. `bin/app`) to wrap the binary in a directory.
-    # Default is the name of the project directory.
+    main: ./cmd/nomad-gitops-operator
+    id: nomoperator
     binary: nomoperator
-
-    # GOOS list to build for.
-    # For more info refer to: https://golang.org/doc/install/source#environment
-    # Defaults are darwin and linux.
+    env: [CGO_ENABLED=0]
     goos:
-      - darwin
       - linux
       - windows
+      - darwin
+    goarch:
+      - amd64
+      - arm64
 
 archives:
   -
