--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -o nomoperator -v cmd/nomad-gitops-operator/main.go
+      run: go build -o nomad-gitops-operator -v cmd/nomad-gitops-operator/main.go
 
     - name: Test
       run: go test -v ./...
